BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_01_TLS基础.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_01_TLS基础.md
@@ -76,6 +76,7 @@ Asymmetrische Verschlüsselung
 
 # 4 Schlüsselvereinbarung mit Diffie-Hellman
 
+
 ![](image/Pasted%20image%2020250207112422.png)
 
 - _**Diffie-Hellman**_ (_**DH**_) ist ein Verfahren zur Vereinbarung eines symmetrischen Sitzungsschlüssels über einen abhörbaren, unsicheren Kommunikationskanal
@@ -84,25 +85,23 @@ Asymmetrische Verschlüsselung
 
 ---
 
-
-![](image/Pasted%20image%2020250207113354.png)
-
-Klassisches Diffie-Hellman
+Klassisches Diffie-Hellman 
 - Partner tauschen ein gemeinsamen Schlüssel über ungesicherte Verbindung aus
 - Durch Kombination von gemeinsamem und jeweiligem privaten Schlüssel berechnen beide Seiten einen öffentlichen Schlüssel und tauschen diesen aus
 - Verschlüsselung des öffentlichen Schlüssel der Gegenseite mit dem eigenen privaten Schlüssel resultiert auf beiden Seiten in demselben symmetrischen Sitzungsschlüssel
+- 没有产生 symmetric session key 的步骤
 
 
 Ephemeral Diffie-Hellman (EDH oder DHE)
 - Verwendung des klassischen DH-Verfahrens zur Erzeugung flüchtiger (ephemeral) Sitzungsschlüssel 
 - Flüchtige Sitzungsschlüssel werden nach der Verbindung gelöscht und ermöglichen Perfect Forward Secrecy
-- _**Perfect Forward Secrecy**_ verhindert den Nachtragszugriff auf verschlüsselte Verbindung bei Kompromittierung eines langfristigen Schlüssels, z.B. wenn verschlüsselte Nachrichtenaustausche aufgezeichnet und später entschlüsselt werden
+- _**Perfect Forward Secrecy**_ 保密性 verhindert den Nachtragszugriff auf verschlüsselte Verbindung bei Kompromittierung eines langfristigen Schlüssels, z.B. wenn verschlüsselte Nachrichtenaustausche aufgezeichnet und später entschlüsselt werden
+
+
+![](image/Pasted%20image%2020250207113354.png)
 
 
 ----
-
-
-![](image/Pasted%20image%2020250207113738.png)
 
 
 Elliptic Curve Diffie-Hellman Ephemeral (ECDHE) 
@@ -112,8 +111,19 @@ Elliptic Curve Diffie-Hellman Ephemeral (ECDHE) 
 - Kombination von empfangenem öffentlichen Schlüssel mit eigenem privaten Schlüssel führt auf beiden Seiten zu demselben symmetrischen Sitzungsschlüssel
 
 
+![](image/Pasted%20image%2020250207113738.png)
+
+
+
 
 # 5 Was ist eine Cipher Suite?
+
+A Cipher Suite Contains
+- protokoll 
+- key exchange approach 
+- symmetrkic and aystmmetric Encryption Algorithms
+- algorithmus of hashing functoin 
+- ... 
 
 
 ![](image/Pasted%20image%2020250207114057.png)
