--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_03_TLS_更多.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_03_TLS_更多.md
@@ -53,10 +53,28 @@ Finite Set DH is based on the Discrete Logarithm Problem
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114528.png)
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114536.png)
+
+![](image/Pasted%20image%2020250215202000.png)
 
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241201010036.png)
+![](image/Pasted%20image%2020250215202011.png)
+
+- _**Finite Set **DH****_ is based on the Discrete Logarithm Problem and operates on groups ZpZp​, where pp is a prime number, and an agreed-upon _**base number**_ g∈Zpg∈Zp​
+- Both parties randomly chose secret parameters a,b∈Zpa,b∈Zp​
+- Secret parameters aa and bb have associated public parameters A=gamod  pA=gamodp and B=gbmod  pB=gbmodp that are exchanged between both parties via an unsecured communication channel
+- Shared secret is combined by the generated private parameter and the received public parameter, which results in the same value on both sides:
+
+Bamod  p=(gb)amod  p=gabmod  pBamodp=(gb)amodp=gabmodp and
+
+Abmod  p=(gb)amod  p=gabmod  pAbmodp=(gb)amodp=gabmodp
+
+- If an attacker knows gg, gaga, and gbgb, computing gabgab is difficult without knowing aa or bb
+- The shared secret is gabgab, which is passed to a _**Key Derivation Function**_ (KDF) to generate one or or more shared symmetric keys
+- The prime pp must be a _**safe prime**_
+- A prime pp is _**safe**_ if p−122p−1​ is also prime
+- A safe prime pp guarantees that Zp∗Zp∗​ has a large cyclic subgroup of prime order p−122p−1​
+- If pp is not a safe prime, Zp∗Zp∗​ can have much smaller subgroups and it would be much easier for an attacker to solve the discrete logarithm problem
+
 
 
 ### 1.3.2 ELLIPTIC CURVE DH
@@ -66,7 +84,24 @@ ECDH (Elliptic Curve Diffi e-Hellman) is based on Elliptic Curve Cryptography (E
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114605.png)
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114615.png)
+![](image/Pasted%20image%2020250215202024.png)
+
+
+- _**ECDH**_ (_**Elliptic Curve Diffie-Hellman**_) is based on Elliptic Curve Cryptography (ECC) and an equation of the form
+
+y2=x3+rx+sy2=x3+rx+s over a finite field FpFp​ with pp being prime
+
+- The points (x,y)(x,y) on the curve form a group withe well-defined addition and scalar multiplication
+- Both parties agree on an elliptic curve EE, its parameters (r,s,p)(r,s,p), and a generator point GG on the curve
+- Both parties determine by random their private keys aa and bb and calculate the associated public keys A=aGA=aG and B=bGB=bG and exchange them 
+- Shared secret SS is combined by the generated private key and the received public key, which results in the same value on both sides:
+
+S=aB=a(bG)S=aB=a(bG) and
+
+S=bA=b(aG)S=bA=b(aG)
+
+- If an attacker knows GG, AA, and BB, computing SS is difficult without knowing aa or bb
+- The y-coordinate of SS is used as the shared secret or input to a KDF
 
 
 
@@ -78,7 +113,15 @@ An eavesdropper simply needs to intercept messages and pretend to be Bob towards
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114628.png)
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114644.png)
+
+![](image/Pasted%20image%2020250215202038.png)
+
+- Anonymous DH, as shown before, is vulnerable to a man-in-the-middle attack
+- An eavesdropper simply needs to intercept messages and pretend to be Bob towards Alice and Alice towards Bob
+- The attacker drops the messages from Alice and Bob and replaces the parameters AA and BB by its own CC and DD and sends them to Alice and Bob
+- The attacker then shares  the secret gadmod  pgadmodp with Alice and gbcmod  pgbcmodp with Bob, and Alice and Bob believe they are sharing the secret with each other (for ECDH analogously)
+
+
 
 ### 1.3.4 AUTHENTICATED DH
 
@@ -87,12 +130,41 @@ Authenticated DH equips the two parties with both a private and a public key, th
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114802.png)
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211114947.png)
+![](image/Pasted%20image%2020250215202054.png)
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211120608.png)
+- _**Authenticated DH**_ equips the two parties with both a private and a public key, thereby allowing Alice and Bob to sign their messages in order to stop the attacker from sending messages on their behalf
+- Alice holds her own private key privAprivA​ and Bob's public key pubBpubB​, and vice versa for Bob, i.e., both parties need to exchange their public keys before 
+- This sort of privpriv/pubpub key pair is called _**long-term key**_ because it is generated in advance and remains constant through multiple runs of the protocol
+- Private keys are used on both sides to sign the messages to be sent with a signing function signsign, while the public keys are used on the other side to verify the signature
+- An eavesdropper cannot pretend to be a legit party towards the other party, unless it compromises one or both private keys
 
 
-# 2 TLS 1.2  HANDSHAKE
+
+
+
+## 1.4 Perfect Forward Secrecy
+
+![](image/Pasted%20image%2020250215195708.png)
+
+
+![](image/Pasted%20image%2020250215202108.png)
+
+- What happens if an attacker records an encrypted communication in the hope of being able to compromise the long-term keys privAprivA​, privBprivB​, or both at a later time ?
+    
+- ==_**Perfect Forward Secrecy**_ ensures that even if a long-term private key is compromised, past communication sessions remain secure==
+- ==Perfect Forward Secrecy is achieved with **_Ephemeral Diffie-Hellman_** (_**DHE**_)==
+- ==For each session, Alice and Bob generate new temporary private keys aa and bb from which the shared secret gabgab is generated==
+- aa and bb are used only for one key exchange and, together with gabgab, need to be deleted immediately after the session
+- As aa and bb are only used for one session and deleted afterwards, they are called _**ephemeral keys**_
+- As neither aa, bb, nor gab are ever transmitted, the attacker cannot record them to decrypt the message when they compromise the private keys privA and/or privB
+- As aa and bb are destroyed after the session, they are not at risk of being comprised like the long-term keys
+
+
+
+
+
+
+# 2 TLS 1.2  Full HANDSHAKE
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211132353.png)
 
@@ -100,7 +172,7 @@ Authenticated DH equips the two parties with both a private and a public key, th
 
 
 
-## 2.1 1-RTT HANDSHAKE
+## 2.1 1-RTT HANDSHAKE  (重点 )
 
 1. client TLS hello msg:
     1. guesses key agreement protocol, parameters
@@ -121,6 +193,17 @@ Authenticated DH equips the two parties with both a private and a public key, th
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241209005013.png)
 
 
+
+- A ClientHello message is sent to the server by the client to initiate the TLS handshake
+- The message contains 
+    - a **random number** to prevent replay attacks, 
+    - ==the client's key share according to DH or ECDH== (calculated before only for this session), 
+    - a list of cipher suites and signature algorithms supported by the client
+- The message may contain optional fields like Server Name Indication (in case the server serves multiple domains), Application-Layer Protocol Negotiation, and a SessionId (for backward compatibility with TLS 1.2)
+- The message is sent in plaintext and unsigned
+
+----
+
 交换什么 
 4. sender 支持那些  cipher suites 
 5. sender 支持哪些 key exchange groups
@@ -139,14 +222,6 @@ Authenticated DH equips the two parties with both a private and a public key, th
 
 ---
 
-
-- A ClientHello message is sent to the server by the client to initiate the TLS handshake
-- The message contains 
-    - a **random number** to prevent replay attacks, 
-    - ==the client's key share according to DH or ECDH== (calculated before only for this session), 
-    - a list of cipher suites and signature algorithms supported by the client
-- The message may contain optional fields like Server Name Indication (in case the server serves multiple domains), Application-Layer Protocol Negotiation, and a SessionId (for backward compatibility with TLS 1.2)
-- The message is sent in plaintext and unsigned
 
 
 ### 2.1.2 ServerHello 
@@ -219,7 +294,7 @@ ServerFinished
  Certificate and CertificateVerify can be omitted in some versions of the handshake
 
 
-### 2.1.5 server rqeust client certificate and client send ClientFinished Message  
+### 2.1.5 server reqeust client certificate and client send ClientFinished Message  
 
 这个交换过程和 server sends its own certificate to client  的过程类似 
 
@@ -265,8 +340,11 @@ ServerFinished
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211125643.png)
 
-
 ## 3.2 TLS 1.3 Handshake (重点 )
+
+
+![](image/Pasted%20image%2020250215184508.png)
+
 
 ![](image/Pasted%20image%2020250207150448.png)
 
@@ -274,6 +352,8 @@ ServerFinished
 - TLS1.3 - Handshake zum Aufbau sicherer Verbindungen
 - Asynchroner Austausch von Nachrichten, d.h. nach den `**ClientHello**`- und `**ServerHello**`-Nachrichten werden weitere Nachrichten gesendet sobald Daten verfügbar sind, nicht wenn vorherige Nachricht von der Gegenseite eintrifft
 - Nach den `**ClientHello**`- und `**ServerHello**`-Nachrichten ist der weitere Handshake verschlüsselt
+    - ClientHello 中含有 client public key and client supported cipher suite  
+    - ServerHello 中含有 server  public key and server supported cipher suite  
 - Perfect Forward Secrecy durch Verwendung ephemeraler Schlüssel
 - Ephemerale Schlüssel und Sitzungsschlüssel werden nach Abbau der Verbindung vernichtet
 
@@ -282,12 +362,27 @@ ServerFinished
 
 ![](image/Pasted%20image%2020250207150734.png)
 
-- **1** und **A**: Generierung ephemeraler Schlüssel
-- **2** und **B**: Austausch ephemeraler Schlüssel und Einigung auf Cipher Suite
-- **3** und **C**: Berechnung eines gemeinsamen Sitzungsschlüssels aus empfangenem öffentlichen Schlüssel der Gegenseite und eigenem privaten Schlüssel
+- **1** und **A**: Generierung ephemeraler Schlüssel using Elliptic Curve Diffie-Hellman Ephemeral (ECDHE) 
+    - 双方各自原本都有 private key 和 public key 但是不用. 
+    - 基于 自己已经有的 private key 和 public, generieren jeder ein asymmetrisches ephemeraler Schlüsselpaar aus öffentlichem und privatem Schlüssel
+- **2** und **B**: Austausch eigenen ephemeraler public Schlüssel an anderen Seite und Einigung auf Cipher Suite
+- **3** und **C**: Berechnung eines gemeinsamen Sitzungsschlüssels (symmetric session key) aus empfangenem öffentlichen Schlüssel der Gegenseite und eigenem privaten Schlüssel
+- Ephemerale Schlüssel (the generierte jeder ein asymmetrisches ephemeraler Schlüsselpaar aus öffentlichem und privatem Schlüssel) und Sitzungsschlüssel  (sysmetrische session key) werden nach Abbau der Verbindung vernichtet 会被 抛弃掉
+-  sysmetrische session key 的用处 
+    - generate client and server-side handshake/application/finish keys through key derivation function  and sysmetrische ephermal session key( 也叫做 shared key)
+    -  server-side handshake keys 用于 加密 the communication during the handshake phase ,  ServerCertificate, ServerCertificateVerify/ServerSignature,   ServerFinish
+    - Client-side handshake keys 用于 加密 the communication during the handshake phase ,  ClientCertificate, ClientCertificateVerify/ClientSignature,   ClientFinish
+    - application key 用于加密 tls 握手之后 的 普通的 application data 的传输
+    - handshake keys   application key  都是通过 key derivation function  and sysmetrische session key 生成的, 但是两者的值不一样
+
+
+
 - **D**: Optionale Anfrage eines Client-Zertifikats
-- **E**: Übersendung Server-Zertifikat mit permanentem öffentlichem Schlüssel
+- **E**: Übersendung Server-Zertifikat mit permanentem öffentlichem Schlüssel  
+    - Server-Zertifikat 中本身就含有 server permanentem öffentlichem Schlüssel 
 - **4**: Überprüfung des Server-Zertifikats
+    - The client checks the validity of the certificate ==(domain name, validity period, CA's signature, the integrity of the certificate chain, the availability of Signed Certificate Timestamps, and the revocation status with CRL or OCSP,...)==
+    - 重要的是 获取 server permanentem öffentlichem Schlüssel . 他讲用于 后边  Überprüfen der Server-Signatur
 - **F**: Generierung einer Server-Signatur mit dem permanenten privaten Schlüssel des Server
 - **G**: Übersendung der Signatur
 
@@ -297,14 +392,19 @@ ServerFinished
 
 
 - **5**: Authentifizierung des Server durch Überprüfen der Server-Signatur
+    - 将 receiver 处得到的 signure 通过 server public key 解密 得到 Digest, 然后 和 clinet 自己通过 hash funktion 计算出来的 digest 进行对比 
 - **H**: Abschluss des Handshake durch den Server
+
 - **6**: Übersendung Client-Zertifikat mit permanentem öffentlichem Schlüssel des Client
 - **I**: Überprüfung des Client-Zertifikats
 - **7**: Generierung einer Client-Signatur mit dem permanenten privaten Schlüssel des Client
 - **8**: Übersendung der Client-Signatur
 - **J**: Authentifizierung des Client durch Überprüfen der Client-Signatur
 - **9**: Abschluss des Handshake durch den Client
+
+
 - **11** und **L**: Austausch von Anwendungsdaten (HTTPS Request/Response)
+    - Anwendungsdaten 的加密 不是直接用  certificate 中的 public key.  而是 用 application key (是 通过  key derivation function  and sysmetrische ephermal session key ) 和  HAMC (去计算 mac). 详细的见 RECORD PROTOCOL 那一部分 在 60_02_01_02_TLS_TRANSPORT_LAYER_SECURITY 章节中 
 
 
 
@@ -318,7 +418,7 @@ ServerFinished
 
 - ==It reduces the overhead of the full handshake by skipping steps like certificate validation and key exchange, leveraging a previously established shared secret.==
 - This is commonly used in scenarios like session resumption to improve performance and reduce latency while maintaining security.
-- 使用从前 session 中 产生的 shared secret  key 
+- ==使用从前 session 中 产生的 shared secret  key ==
 
 ---
 
@@ -381,9 +481,11 @@ Secure Data Transmission:
 
 ### 3.3.2 0-RTT HANDSHAKE
 
-![](../../../62_Digital_Identity/image/Pasted%20image%2020241211131015.png)
+
 
 ![](image/Pasted%20image%2020250108202721.png)
+
+![](../../../62_Digital_Identity/image/Pasted%20image%2020241211131015.png)
 
 - A 0-RTT (Zero Round-Trip Time) handshake allows a client to send data immediately after the ClientHello message without waiting for the server's response
 - It reduces latency, making connections faster, especially for applications requiring low delays, such as web browsing, APIs, and real-time communication
@@ -400,6 +502,13 @@ Secure Data Transmission:
 ## 3.4 TLS 1.3 CIPHER SUITES
 
 ![](../../../62_Digital_Identity/image/Pasted%20image%2020241211131415.png)
+
+A Cipher Suite Contains
+- protokoll 
+- key exchange approach 
+- symmetrkic and aystmmetric Encryption Algorithms
+- algorithmus of hashing functoin 
+- ... 
 
 
 - A cipher suite is a standardized set of algorithms used to secure communications in protocols like TLS
